tests/ui/cilk/borrows_live_before_sync.stderr
error[E0502]: cannot borrow `s` as mutable because it is also borrowed as immutable
  --> $DIR/borrows_live_before_sync.rs:17:5
   |
LL |         println!("{}", &s);
   |                        -- immutable borrow occurs here
LL |     };
LL |     s.push_str(" world");
   |     ^^^^^^^^^^^^^^^^^^^^ mutable borrow occurs here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0502`.
